--- a/post/templates/post/post-list.html
+++ b/post/templates/post/post-list.html
@@ -1,24 +1,35 @@
 {% extends "layouts/base.html" %}
 {% block title %}Post Page{% endblock %}
 {% block content %}
-<div class="col-md-12 mb-1 mt-1">
-    <a href="{% url 'post_create' %}" class="btn btn-success">Add New Post</a>
-</div>
-<div class="row">
-    {% for post in posts %}
-        <div class="col-md-4"> <!-- Each card is wrapped in a col-md-4 -->
-            <div class="card mt-2">
-                <img src="{{ post.photo.url }}" class="card-img-top" alt="No-Image" width="100" height="200">
-                <div class="card-body">
-                    <h5 class="card-title">{{ post.user.username }}</h5>
-                    <p class="card-text">{{ post.text }}</p>
-                    {% if post.user == user %}
-                    <a title="Edit" href="{% url 'post_edit' post.id %}" class="btn btn-success">Edit</a>
-                    <a title="Delete" href="{% url 'post_delete' post.id %}" class="btn btn-danger">Delete</a>
-                    {% endif %}
+<div class="container">
+    <div class="mt-2">
+        <a href="{% url 'post_create' %}" class="btn btn-success btn-sm"> <i class="fa fa-plus"></i> Add New Post</a>
+    </div>
+    <div class="row justify-content-center">
+        {% for post in posts %}
+            <div class="col-md-4"> <!-- Each card is wrapped in a col-md-4 -->
+                <div class="card shadow mt-2">
+                    <a href="{% url "post_detail" post.id %}" class="text-decoration-none">
+                        <img src="{{ post.photo.url }}" class="card-img-top" alt="No-Image" width="100" height="200">
+                    </a>
+                    <div class="card-body">
+                        <div class="d-flex justify-content-between">
+                            <h5 class="card-title">
+                                <a href="{% url "post_detail" post.id %}" class="text-decoration-none">{{post.title|default:"No title"}}</a>
+                            </h5>
+                            <h5 class="card-title">
+                                <a href="#" class="text-decoration-none">{{ post.user.username }}</a>
+                            </h5>
+                        </div>
+                        <p class="card-text">{{ post.text }}</p>
+                        {% if post.user == user %}
+                        <a title="Edit" href="{% url 'post_edit' post.id %}" class="text-success"><i class="fa fa-pencil"></i></a>
+                        <a title="Delete" href="{% url 'post_delete' post.id %}" class="text-danger"><i class="fa fa-trash"></i></a>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
-        </div>
-    {% endfor %}
+        {% endfor %}
+    </div>
 </div>
 {% endblock content %}
