--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -4,75 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/media/images/corevista_logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/media/images/corevista_logo.png" type="image/x-icon">
     <title>{% block title %}{{title}}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">CoreVista</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" id="themeToggleBtn" aria-current="page" href="#">Switch to Dark Mode</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'post_create' %}">Post</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown
-                        </a>
-                        <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                    </li>
-                    </ul>
-                    <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                    <a href="{% url 'post_list' %}" class="btn btn-primary mx-2">Post Home</a>
-                    {% if user.is_authenticated %} 
-                        <form method="post" action="{% url 'logout' %}">
-                            {% csrf_token %}
-                            <button class="btn btn-danger" type="submit" >Logout</button>
-                        </form>
-                    {%else%}
-                    <a href="{% url 'login' %}" class="btn btn-success mx-2">Login</a>
-                    <a href="{% url 'register' %}" class="btn btn-info mx-2">Register</a>
-                    {% endif %}
-                </div>
-            </div>
-        </nav>
+    <div class="container-fluid">
+        {% include "layouts/navbar.html" %}
         {% block content %}{% endblock %}
+        {% include "layouts/footer.html" %}
     </div>
     <script>
         const toggleBtn = document.getElementById('themeToggleBtn');
         const bodyElement = document.body;
-
         toggleBtn.addEventListener('click', function() {
             // Check the current theme
             if (bodyElement.getAttribute('data-bs-theme') === 'light') {
                 bodyElement.setAttribute('data-bs-theme', 'dark');
-                toggleBtn.textContent = 'Switch to Light Mode';
+                themeToggleBtn.innerHTML = '<i class="fas fa-sun"></i>';
             } else {
                 bodyElement.setAttribute('data-bs-theme', 'light');
-                toggleBtn.textContent = 'Switch to Dark Mode';
+                themeToggleBtn.innerHTML = '<i class="fas fa-moon"></i>';
             }
         });
     </script>
