--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,25 +1,26 @@
 {% extends "layouts/base.html" %}
 {% block title %}Login User{% endblock %}
 {% block content %}
-<div class="col-md-12 mb-1 mt-1">
-    <h3>Login User</h3>
-</div>
-<div class="row">
-    <div class="card mt-2">
-        <form method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            {% comment %} {{form.as_p}} {% endcomment %}
-            <div class="mb-3">
-                <label for="username" class="form-label">Username</label>
-                <input type="text" class="form-control" name="username" id="username">
+<div class="row justify-content-center">
+    <div class="col-md-5 mt-4 shadow">
+            <h3>Login User</h3>
+            <div class="mt-2">
+                <form method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {% comment %} {{form.as_p}} {% endcomment %}
+                    <div class="mb-3">
+                        <label for="username" class="form-label">Username</label>
+                        <input type="text" class="form-control" name="username" id="username">
+                    </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" class="form-control" name="password" id="password">
+                    </div>
+                    <button type="submit" class="btn btn-success mb-2">Login</button>
+                </form>
+                <p>Don't have an account <a href="{% url 'register' %}">Register Here</a></p>
             </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" name="password" id="password">
-            </div>
-            <button type="submit" class="btn btn-success mb-2">Login</button>
-        </form>
-        <p>Don't have an account <a href="{% url 'register' %}">Register Here</a></p>
+        </div>
     </div>
 </div>
 {% endblock content %}
