--- a/post/templates/post/post-detail.html
+++ b/post/templates/post/post-detail.html
@@ -16,8 +16,62 @@
                         </h5>
                     </div>
                     <p class="card-text">{{ post.text }}</p>
-                    
-                </div>
+                    <h2>Comments({{ comments.count }})</h2>
+                    {% for comment in comments %}
+                    <div class="card mt-1">
+                        <div class="card-body">
+                          <div class="d-flex flex-start align-items-center">
+                            <img class="rounded-circle shadow-1-strong me-3"
+                              src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(19).webp" alt="avatar" width="60"
+                              height="60" />
+                            <div>
+                              <h6 class="fw-bold text-primary mb-1">{{comment.user.username}}</h6>
+                              <p class="text-muted small mb-0">
+                                Shared publicly - {{comment.created_at}}
+                              </p>
+                            </div>
+                          </div>              
+                          <p class="mt-1 mb-2 pb-2">{{comment.comment}}</p>              
+                          <div class="small d-flex justify-content-start">
+                            <a href="#!" class="btn btn-light btn-sm d-flex align-items-center me-2">
+                              <i class="far fa-thumbs-up me-1"></i> 
+                              Like
+                          </a>
+                          <!-- Comment Button -->
+                          <a href="#!" class="btn btn-light btn-sm d-flex align-items-center me-2">
+                              <i class="far fa-comment-dots me-1"></i> 
+                              Comment
+                          </a>                          
+                          <!-- Share Button -->
+                          <a href="#!" class="btn btn-light btn-sm d-flex align-items-center">
+                              <i class="fas fa-share me-1"></i> 
+                              Share
+                          </a>
+                          </div>
+                        </div>
+                    </div>
+                    {% empty %}
+                      <p>No comments yet. Be the first to comment!</p>
+                    {% endfor %}
+                    <form method="post">
+                      {% csrf_token %}
+                        <div class="py-3" style="background-color: #f8f9fa;">
+                          <div class="d-flex flex-start w-100">
+                              <img class="rounded-circle shadow-1-strong me-3"
+                              src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(19).webp" alt="avatar" width="40"
+                              height="40" />
+                              <div class="form-outline w-100">
+                                  <textarea class="form-control" id="textAreaExample" rows="4"
+                                  style="background: #fff;"  name="comment" placeholder="Comment"></textarea>
+                              </div>
+                          </div>
+                          <div class="float-end mt-2 pt-1">
+                              <button  type="submit" class="btn btn-success">Post comment</button>
+                              <button  type="submit" class="btn btn-outline-primary">Cancel</button>
+                          </div>
+                        </div>
+                      </div>
+                    </form>
         </div>
     </div>
 </div>
