--- a/post/templates/post/post-list.html
+++ b/post/templates/post/post-list.html
@@ -5,7 +5,7 @@
     <div class="mt-2">
         <a href="{% url 'post_create' %}" class="btn btn-success btn-sm"> <i class="fa fa-plus"></i> Add New Post</a>
     </div>
-    <div class="row justify-content-center">
+    <div id="results" class="row justify-content-center">
         {% for post in posts %}
             <div class="col-md-4"> <!-- Each card is wrapped in a col-md-4 -->
                 <div class="card shadow mt-2">
